--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="app">
@@ -13,6 +15,10 @@
           <label for="todo-input">Add to your todo list!</label>
           <input class="todo-input" type="text" name="todo-input">
           <button class="add-todo">ADD</button>
+          <button class="clear-todos">Clear todos</button>
+          <div>
+            <button class='hide-show btn btn-secondary btn-sm'>Hide completed</button>
+          </div>
         </section>
       <ol class="todo-list"></ol>
     </div>
